--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini_lite]
+[env:esp12e]
 platform = espressif8266
-board = d1_mini_lite
+board = esp12e
 framework = arduino
-board_build.ldscript = eagle.flash.4m1m.ld
 upload_speed = 460800
 monitor_speed = 74880
+
+upload_protocol = espota
+upload_port = smc.devices
 
 ; build_type = debug
 
@@ -35,7 +37,3 @@ lib_deps =
     ESPAsyncTCP
     asyncHTTPrequest
     ArduinoOTA
-
-upload_protocol = espota
-upload_port = smc.devices
-; upload_resetmethod = nodemcu
