Support Arduino OTA password

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 74880
 
 upload_protocol = espota
 upload_port = smc.devices
+; upload_flags = --auth=<ArduinoOTA password>
 
 ; build_type = debug
 
