--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ monitor_speed = 74880
 
 upload_protocol = espota
 upload_port = smc.devices
-; upload_flags = --auth=<ArduinoOTA password>
+upload_flags = --auth="${sysenv.PIO_ESP_SMC_AUTH}"
 
 ; build_type = debug
 
