--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ build_flags =
     -DIOT_ENABLE_SYSTEM_CLOCK
     ; -DIOT_ENABLE_BLYNK
     -DIOT_ENABLE_MQTT
+    -DIOT_ENABLE_MQTT_LARGE_BUFFER
     ; -DDEBUG_ESP_HTTP_SERVER
     ; -DDEBUG_ESP_WIFI
 
